fluxcd/base/hawkbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawkbit
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: hawkbit
  template:
    metadata:
      annotations:
        # json encoder ist nicht im image
        # TODO eigenes image bauen welches nach JSON loggen kann
        fluentbit.io/exclude: "true"
      labels:
        app.kubernetes.io/name: hawkbit
    spec:
      containers:
        - name: hawkbit
          image: docker.io/hawkbit/hawkbit-update-server
          imagePullPolicy: IfNotPresent
          # get: docker inspect docker.io/hawkbit/hawkbit-update-server:0.3.0M8 | jq -r .[].Config.Entrypoint
          # was: java -jar hawkbit-update-server.jar -Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=250m -XX:MetaspaceSize=250m -Xss1024K -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+HeapDumpOnOutOfMemoryError
          command:
            - java
            - -jar
            - hawkbit-update-server.jar
            - -Dlogging.config=file:///opt/hawkbit/logback-spring.xml
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          startupProbe:
            httpGet:
              path: /UI/login
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 300
          livenessProbe:
            httpGet:
              path: /UI/login
              port: http
            periodSeconds: 3
            timeoutSeconds: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /opt/hawkbit/logback-spring.xml
              subPath: logback-spring.xml
              readOnly: true
            - name: tmp
              mountPath: /tmp
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: hawkbit-config
        - name: tmp
          emptyDir:
            sizeLimit: 20Mi
