fluxcd/base/hawkbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hawkbit
  annotations:
    kubernetes.io/tls-acme: true
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: auth-grayc-de@file
spec:
  ingressClassName: traefik
  rules:
    - host: hawkbit.<patched>.inoa.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hawkbit
                port:
                  name: http
  tls:
    - hosts: [hawkbit.<patched>.inoa.io]
      secretName: hawkbit-tls
